--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 <!--<!DOCTYPE html>
@@ -294,10 +293,29 @@
         </div>
         <div class="form-group">
             <label for="email">Email</label>
+       
             <input type="email" name="email" id="email-input" placeholder="Enter your Email-Id" required>
             <div id="email-validation-message" class="validation-message">
             </div>
         </div>
+        <div class="col-lg-12 align-items-end mb-3">
+            <div class="form-group">
+                <label for="{{ form.usertype.id_for_label }}">User Type</label>
+                <span id="usertype-validation-message" class="validation-message"></span>
+                {{ form.user_type }}
+            
+                <!-- <div class="form-field">
+                    <div class="select-wrap">
+                        <select name="" id="" class="form-control">
+                            <option value="">Choose</option>
+                            <option value="">Traveller</option>
+                            <option value="">Driver</option>
+                        </select>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
         <div id="integrity-error-message" class="error_message"></div>   
         <div class="form-group">
             <label for="password">Password</label>
