--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
+    <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
+
     <style>
         /* Navbar styles (unchanged) */
         .navbar {
@@ -119,7 +121,7 @@
             <input type="text" name="username" placeholder="username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <a href="">Forgot Your Password</a>
+            <a href="{% url 'reset_password' %}">Forgot Your Password</a>
         </form>
     </div>
 </body>
