--- a/templates/registration.html
+++ b/templates/registration.html
@@ -148,6 +148,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
+    <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
+
     <style>
              .navbar {
             background-color: #113156;
@@ -264,12 +266,12 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <a href="home">HOME</a>
+        <a href="/home">HOME</a>
         <a href="#">NIWITRAVELS</a>
         <a href="#">ABOUT</a>
         <a href="#">SERVICES</a>
         <a href="des">DESTINATION</a>
-        <a href="/login">LOGIN</a>
+        <a href="/log">LOGIN</a>
     </div>
 
 
