--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,15 @@
             color: #cd1100; /* Text color on hover */
             text-decoration: underline;
         }
-
+        .footer {
+            background-color: #113156;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -96,11 +104,11 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <a href="/home">HOME</a>
+        <a href="/">HOME</a>
         <a href="#">NIWITRAVELS</a>
         <a href="#">ABOUT</a>
         <a href="#">SERVICES</a>
-        <a href="des">DESTINATION</a>
+        <a href="#">DESTINATION</a>
         <a href="/register">REGISTER</a>
     </div>
 
@@ -120,9 +128,27 @@
             {% csrf_token %}
             <input type="text" name="username" placeholder="username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <button type="submit" id="login-link">Login</button>
             <a href="{% url 'reset_password' %}">Forgot Your Password</a>
         </form>
     </div>
+    <div class="footer">
+        &copy; 2023 Niwi Travels. All Rights Reserved.
+    </div>
+    <script>
+        // Wait for the document to be fully loaded
+        document.addEventListener("DOMContentLoaded", function () {
+            // Find the logout button by its ID
+            var logoutButton = document.getElementById("login-link");
+    
+            // Add a click event listener to the logout button
+            logoutButton.addEventListener("click", function () {
+                // Reload the page after a short delay (you can adjust the delay as needed)
+                setTimeout(function () {
+                    location.reload();
+                }, 1000); // Reload after 1 second (1000 milliseconds)
+            });
+        });
+    </script>
 </body>
 </html>
